# shift_meeting_rooms

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/versions/: 3da26bf68067_first_migration.py
app/api/: routers.py  validators.py
app/api/endpoints/: meeting_room.py  reservation.py  user.py
app/core/: config.py  user.py
app/crud/: __init__.py  base.py  meeting_room.py  reservation.py
app/models/: meeting_room.py  reservation.py
app/schemas/: __init__.py  meeting_room.py  reservation.py
app/scripts/: create_superuser.py
tests/unit/: test_api_validators.py  test_config.py  test_core_user.py  test_schemas_meeting_room.py  test_schemas_reservation.py  test_user_manager.py
