[project]
name = "shift-meeting-rooms"
version = "0.1.0"
description = ""
authors = [
    {name = "Максим Шашков",email = "maks.shashkovwork@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (==0.78.0)",
    "uvicorn[standard] (==0.17.6)",
    "asyncpg (==0.27.0)",
    "sqlalchemy (==1.4.36)",
    "alembic (==1.7.7)",
    "greenlet (==3.1.1)",
    "fastapi-users[sqlalchemy] (==10.0.6)",
    "fastapi-users-db-sqlalchemy (<5.0.0)",
    "setuptools (==69.5.1)",
    "bcrypt (<=4.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
